[package]
name = "hare"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.5.0"
tokio = { version = "1.29.1", features = ["sync", "macros", "rt-multi-thread"] }
futures-lite = "2.5.0"
log = "0.4.19"
env_logger = "0.11.5"
anyhow = "1.0.94"
thiserror = "2.0.4"
fern = "0.7.0"
humantime = "2.1.0"
